--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kafan/vue-turntable",
+  "name": "vue-turntable",
   "version": "1.0.0",
   "description": "转盘组件",
   "main": "lib/index.umd.min.js",
@@ -14,6 +14,7 @@
     "package": "vue-cli-service build --target lib --name index --dest lib packages/index.js"
   },
   "dependencies": {
+    "@kafan/vue-turntable": "^1.0.0",
     "autoprefixer": "^8.6.5",
     "core-js": "^3.8.2",
     "node-sass": "^4.14.1",
