优化代码结构

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-turntable",
-  "version": "1.0.0",
+  "name": "@kafan/vue-turntable",
+  "version": "1.0.1",
   "description": "转盘组件",
   "main": "lib/index.umd.min.js",
   "keyword": "vue-turntable turntable",
